# Prueba-Falabella---Backend

./: .replit  database.py  local.db  main.py  models.py  netlify-build.sh  netlify.toml  pyproject.toml  replit.md  requirements.txt  seed.py
attached_assets/: Pasted-Rol-Eres-un-Ingeniero-de-Software-Senior-experto-en-Pyt_1765403630568.txt
templates/: index.html
